--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -5,7 +5,7 @@
     link: https://www.meetup.com/Sydney-Serverless-Meetup-Group/
     talks: 
         - link: https://www.meetup.com/Sydney-Serverless-Meetup-Group/events/265107528/
-          talk: Complexity in Deployments: Django on GCP
+          talk: "Complexity in Deployments: Django on GCP"
           slides: 2019_10_SydServ
           twitter: https://twitter.com/SydServerless/status/1184372482515460096
 - conference:
