--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -5,6 +5,7 @@
     link: https://devopsdays.org/events/2019-auckland/welcome/
     talks:
         - link: https://devopsdays.org/events/2019-auckland/program/katie-mclaughlin
+          slides: 2019_10_DevOpsDaysAKL.podium/
           name: "Being kind to 3am you"
           twitter: https://twitter.com/toolmantim/status/1186388042753265664
 
