link to the things

--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -8,6 +8,7 @@
           slides: 2019_10_DevOpsDaysAKL.podium/
           name: "Being kind to 3am you"
           twitter: https://twitter.com/toolmantim/status/1186388042753265664
+          resources: https://blog.darkmere.gen.nz/2019/10/devopsdays-nz-2019-day-2-session-1/
 
 - conference: 
     name: PubConf Sydney 2019
