--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -161,6 +161,7 @@
          link: https://th.pycon.org/en/#keynotes
          slides: 2019_06_PyConTH.podium
          resources: https://github.com/glasnt/talks/blob/gh-pages/2019_06_PyConTH.podium/resources.md
+         video: https://www.youtube.com/watch?v=RpVtXCaeT_Q
 
 - conference: 
     name: PyCon
