--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -506,7 +506,7 @@
         transcript: https://twitter.com/skimbrel/status/865682411446718464
       - name: Emoji Archeology 101 (Cover Version)
         type: Lightning Talk
-        slides: 2017_05_PyConUS_EmojiArch
+        slides: emoji-archeology-101
         twitter: https://twitter.com/phildini/status/865731765876383744
         transcript: http://draft.sx/2e9e2c261943fce1e1b24eaee4e776a5
         video: https://youtu.be/tK6ZIf0yYhs?t=39
