--- a/_data/emoji-archeology-101/slides.yaml
+++ b/_data/emoji-archeology-101/slides.yaml
@@ -165,7 +165,7 @@ slides:
 - alt: What to do?
   image: images/slide_32.png
   text: So what are we to do? Some might call for emoji to be eliminated. To be struck
-    from our collective history.<br/><br/>But what would be defeat. We should fight
+    from our collective history.<br/><br/>But that would be defeat. We should fight
     for our emotions.
 - alt: Rise up!
   image: images/slide_33.png
