--- a/_data/expressivesecurity/slides.yaml
+++ b/_data/expressivesecurity/slides.yaml
@@ -36,6 +36,8 @@ slides:
     gives us a huge address space to encode over a million characters to allow
     every character of near every written human language to be encoded. But as
     this standard grew, more than just alphabets were added.
+  footnote:
+    link: https://increment.com/internationalization/the-wonderful-world-of-emoji/
 - alt: "@glasnt\n\U000F03E6\U0001F61F\u2753"
   image: images/slide_4.png
   text: The very early versions of Unicode had all three of the main writing systems
@@ -122,6 +124,8 @@ slides:
   text: "None of them look like Sirocco the k\u0101k\u0101p\u014D, for which my original\
     \ parrot emoji <br>submission was based. <br>You might recognise him as the Party\
     \ Parrot."
+  footnote:
+    link: https://doc.govt.nz/nature/native-animals/birds/birds-a-z/kakapo/sirocco/
 - alt: '@glasnt
 
     Party Parrot!!'
@@ -151,6 +155,8 @@ slides:
     \ we might look to the mouth to work out the emotion, but particularly in <br>Manga,\
     \ the eyes are used. <br>In 2016 the Beaming Face with Smiling Eyes emoji was\
     \ updated to have also a <br>smiling mouth."
+  footnote:
+    link: https://grouplens.org/blog/investigating-the-potential-for-miscommunication-using-emoji
 - alt: "@glasnt\nApple 2010\n\U0001F424 \U0001F427 \U0001F40E \U0001F437\nApple 2021"
   image: images/slide_21.png
   text: As the years go on, the emoji representations that vendors service can be
@@ -230,9 +236,15 @@ slides:
   text: For particular codepoints that get updated often, using the knowledge about
     vendor <br>updates we learnt earlier, you can pin down to the minor version the
     operating <br>system.
+  footnote:
+    link: https://emojipedia.org/downcast-face-with-sweat/
+    text: emojipedia.org/downcast-face-with-sweat/
 - alt: "@glasnt\nPreviewed \nWindows \nFluent\nWindows \nInsider Fluent\nWindows 8.0\
     \ Windows 8.1 Windows 10  Windows 10 \nAnniversary May 2019 \nUpdate\nblog.emojipedia.org/\uFB02\
     uent-emojis-look-different-to-how-you-last-saw-them/"
+  footnote: 
+    link: https://blog.emojipedia.org/fluent-emojis-look-different-to-how-you-last-saw-them/
+    text: blog.emojipedia.org/fluent-emojis-look-different-to-how-you-last-saw-them/
   image: images/slide_34.png
   text: The next version of this emoji may or may not be flat or 3d shaded. Depending
     on <br>which one comes out on the retail version of Windows, you might be able
@@ -264,6 +276,9 @@ slides:
   image: images/slide_38.png
   text: it'd do this. <br>This isn't the first and won't be the last time that unique
     sequences of characters <br>crash mobile devices.
+  footnote:
+    link: https://thehackernews.com/2017/01/crash-iphone-emoji.html
+    text: thehackernews.com/2017/01/crash-iphone-emoji.html
 - alt: '@glasnt
 
     2015 2018 2020
@@ -275,6 +290,9 @@ slides:
     it's not just emoji, combinatorics of scripts like arabic and telugu (teh-luh-goo)
     <br>have been reported to cause issues. <br>These are just some examples of combinations
     that have rebooted enough phones to <br>get news coverage.
+  footnote:
+    link: https://theverge.com/2020/4/24/21234191/apple-iphone-crash-text-bug-ios-13-problem
+    text: theverge.com/2020/4/24/21234191/apple-iphone-crash-text-bug-ios-13-problem
 - alt: "@glasnt\n\U0001F30E\U0001F525\npoststatus.com/the-trojan-emoji/ CVE-2015-3438"
   image: images/slide_40.png
   text: The biggest example of these issues coming together happened a few years ago
@@ -304,6 +322,9 @@ slides:
     updates, but also, new emoji!"<br>Versions prior to this, though, with particular
     database setups were susceptible to <br>cross-site-scripting using emoji as the
     vector. <br>I'm going to show you how this works, with a smile.
+  footnote:
+    link: https://wordpress.org/news/2015/04/powell/
+    text: wordpress.org/news/2015/04/powell/
 - alt: "@glasnt\n\U0001F642\n\\u1F642\nSLIGHTLY SMILING FACE"
   image: images/slide_42.png
   text: Specifically this smile. <br>This smile is not your average smile. <br><br>This
@@ -476,6 +497,9 @@ slides:
     you're a Rails dev, maybe give this bug a go? There's advise in those bugs about
     <br>how such migration works in Rails 5, specifically with changing the encoding
     of the <br>specific fields where emoji would be useful.
+  footnote: 
+    link: https://github.com/openSUSE/osem/issues/2686
+    text: github.com/openSUSE/osem/issues/2686
 - alt: '@glasnt
 
     gem install uniscribe
@@ -483,6 +507,9 @@ slides:
     github.com/janlelis/uniscribe'
   image: images/slide_59.png
   text: Also, a useful lil app to help you with your emoji poking is this.
+  footnote:
+    link: https://github.com/janlelis/uniscribe
+    text: github.com/janlelis/uniscribe
 - alt: "@glasnt\n\u2728\U0001F4BB\u2728"
   image: images/slide_60.png
   text: Regardless of which system you're using, try adding the odd emoji in it. <br>Adding
