--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ baseurl           : "/talks"
 
 title_left         : "glasnt.com"
 url                : "https://glasnt.com"
-google_analytics   : G-265B4NHGG0
+google_analytics   : G-5Q2WPZ8NN3
 twitter_username   : "glasnt"     
 postshare_enabled  : true
 
