--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -44,7 +44,8 @@
     link: https://events.google.com/io/?lng=en
     talks:
       - name: Serverless Demo Derby
-        link: https://www.youtube.com/watch?v=g4ES7wXn8oQ
+        video: https://www.youtube.com/watch?v=g4ES7wXn8oQ
+        link: https://io.google/2021/session/a521df15-1fe2-4011-8e92-5779566e2116?lng=en
         
 - conference:
     name: The Power of Serverless
