--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -263,6 +263,7 @@
     location: Bangkok, Thailand
     talks:
       - name: "How Python Can Excel"
+        type: Keynote
         link: https://th.pycon.org/en/#keynotes
         slides: 2019_06_PyConTH.podium
         resources: https://github.com/glasnt/talks/blob/gh-pages/2019_06_PyConTH.podium/resources.md
