--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -1,4 +1,13 @@
 - conference: 
+    name: KiwiPyCon
+    date: 2022-08-20
+    link: https://kiwipycon.nz/
+    talks: 
+      - name: What is deployment, anyway?
+        link: https://pretalx.com/kiwipycon-2021/talk/JTMKJF/
+        slides: "what-is-deployment-anyway"
+
+- conference: 
     name: Flutter Melbourne
     date: 2022-06-16
     link: https://www.meetup.com/Flutter-Melbourne
@@ -125,7 +134,7 @@
     date: 2020-04-23
     link: https://twitter.com/ChatDjango
     talks:
-      - link: https://djangochat.com/#ep60
+      - link: https://djangochat.com/episodes/advanced-deployment-katie-mclaughlin
         type: Podcast
         name: Advanced Deployment
         twitter: https://twitter.com/ChatDjango/status/1253015132428435457
@@ -260,7 +269,7 @@
     date: 2019-07-04
     link: https://twitter.com/ChatDjango
     talks:
-      - link: https://djangochat.com/#ep19
+      - link: https://djangochat.com/episodes/katie-mclaughlin
         type: Podcast
         name: Katie McLaughlin
         twitter: https://twitter.com/glasnt/status/1146558903997460481
