--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -1,4 +1,34 @@
 - conference: 
+    name: DevOpsDays Chicago
+    location: Chicago, Illinois
+    date: 2023-08-09
+    link: https://devopsdays.org/events/2023-chicago/welcome/
+    talks:
+      - type: Keynote
+        name: The State of DevOps - Capabilities for Building High-performing Technology Teams
+        link: https://devopsdays.org/events/2023-chicago/program/katie-amanda
+
+- conference: 
+    name: DevOpsDays Global Organiser Summit 
+    location: Chicago, Illinois
+    date: 2023-08-08
+    link: https://devopsdays.org/events/2023-organizer-summit/welcome/
+    talks: 
+      - type: Keynote
+        name: Who Is Core and How They Help You
+        link: https://devopsdays.org/events/2023-organizer-summit/program/katie-yvo-dan
+
+- conference: 
+    name: MelbDjango
+    date: 2023-07-23
+    location: Melbourne, Australia
+    link: https://www.meetup.com/melbdjango
+    talks: 
+      - name: Present like a pro
+        link: https://www.meetup.com/melbdjango/events/294611140
+        resources: present-like-a-pro
+
+- conference: 
     name: MelbDjango
     date: 2023-05-03
     location: Melbourne, Australia
@@ -6,8 +36,7 @@
     talks: 
       - name: DjangoCon AU CFP Writing Workshop
         link: https://www.meetup.com/melbdjango/events/292966230/
-
-        slides: "djangoconau-cfp-workshop"
+        slides: "2023-05-djangoconau-cfp-workshop"
 
 - conference: 
     name: DevOpsTalks
