--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -1,6 +1,6 @@
 - conference: 
     name: PyCon AU
-    location: Adealide, South Australia
+    location: Adelaide, South Australia
     date: 2023-08-18
     link: https://2023.pycon.org.au/
     talks: 
