--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -9,7 +9,7 @@
         link: https://2023.pycon.org.au/program/UAR3GC/
         video: https://youtu.be/_K_iOttL1ro?t=3227
         resources: present-like-a-pro
-      - name: Present like a pro!
+      - name: Present like a pro
         link: https://2023.pycon.org.au/program/ABGMQH/
         video: https://www.youtube.com/watch?v=YMcx35RGzYM
         resources: present-like-a-pro
