--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -49,8 +49,7 @@
     date: 2023-08-09
     link: https://devopsdays.org/events/2023-chicago/welcome/
     talks:
-      - type: Keynote
-        name: The State of DevOps - Capabilities for Building High-performing Technology Teams
+      - name: The State of DevOps - Capabilities for Building High-performing Technology Teams
         link: https://devopsdays.org/events/2023-chicago/program/katie-amanda
 
 - conference:
@@ -59,8 +58,7 @@
     date: 2023-08-08
     link: https://devopsdays.org/events/2023-organizer-summit/welcome/
     talks:
-      - type: Keynote
-        name: Who Is Core and How They Help You
+      - name: Who Is Core and How They Help You
         link: https://devopsdays.org/events/2023-organizer-summit/program/katie-yvo-dan
 
 - conference:
@@ -108,7 +106,6 @@
     link: https://devops.talksplus.com/
     talks:
       - name: State of DevOps Report Story Time
-        type: Keynote
 
 - conference:
     name: DjangoCon US
